kubernetes/apps/default/sakamata/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sakamata
  labels: &labels
    app.kubernetes.io/part-of: sakamata
    app.kubernetes.io/name: sakamata
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      containers:
        - name: sakamata
          image: ghcr.io/faldez/sakamata:main
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
