kubernetes/apps/default/sakamata/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sakamata
  labels:
    app.kubernetes.io/part-of: sakamata
    app.kubernetes.io/name: sakamata
    app.kubernetes.io/component: server
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/part-of: sakamata
    app.kubernetes.io/name: sakamata
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 8080
      targetPort: http
